[gd_scene load_steps=2 format=3 uid="uid://c3wjbvupk528p"]

[ext_resource type="Script" path="res://autoloads/SoundPlayer.gd" id="1_h2b64"]

[node name="SoundPlayer" type="Node"]
process_mode = 3
script = ExtResource("1_h2b64")

[node name="AudioPlayers" type="Node" parent="."]

[node name="AmbientSoundPlayers" type="Node" parent="."]

[node name="MusicPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MusicPlayers"]
bus = &"Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="MusicPlayers"]
bus = &"Music"

[node name="PositionalAudioPlayers" type="Node" parent="."]
